# Asciinema

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
include/asciinema/: .gitkeep  decoder.h  frame.h  metrics.h  pipeline.h  processor.h  queue.h  renderer.h  types.h
samples/: .gitkeep
src/: .gitkeep  decoder.cpp  main.cpp  pipeline.cpp  processor.cpp  renderer.cpp
